Display children on build page

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -127,6 +127,7 @@ services:
             - '@build.twig'
             - '@hal.build'
             - '@service.event_logs'
+            - '@doctrine.em'
     build.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['build/build.twig']]]
