--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
 
         "jshint-stylish": "~2.0.1",
         "run-sequence": "~1.1.4",
-        "webpack": "~1.12.2"
+        "webpack": "~1.12.2",
+
+        "favico.js": "~0.3",
+        "jquery": "2.1.3",
+        "hideseek": "~0.6.2",
+        "nunjucks": "~2.2.0",
+        "sugar-date": "~1.5",
+        "svg4everybody": "~2.0.1",
+        "tablesaw": "~2.0.2"
     }
 }
