--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "webpack": "~1.12.2",
 
         "favico.js": "~0.3",
+        "fuse.js": "~1.3",
         "jquery": "2.1.3",
         "hideseek": "~0.6.2",
         "nunjucks": "~2.2.0",
