--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 
     "dependencies": {
         "bower": "~1.6.2",
-        "del": "~2.0.2",
         "gulp": "~3.9.0",
+        "webpack": "~1.12.2",
 
+        "del": "~2.0.2",
         "gulp-autoprefixer": "~2.0.0",
         "gulp-jshint": "~1.5.3",
         "gulp-nunjucks": "~2.0.0",
@@ -16,15 +17,20 @@
 
         "jshint-stylish": "~2.0.1",
         "run-sequence": "~1.1.4",
-        "webpack": "~1.12.2",
+        "exports-loader": "~0.6.2",
 
+        "babel-loader": "~6.2",
+        "babel-core": "~6.3",
+        "babel-preset-es2015": "~6.3",
+
+        "durationjs": "~1.1.1",
         "favico.js": "~0.3",
         "fuse.js": "~1.3",
         "jquery": "2.1.3",
-        "hideseek": "~0.6.2",
         "nunjucks": "~2.2.0",
         "sugar-date": "~1.5",
         "svg4everybody": "~2.0.1",
-        "tablesaw": "~2.0.2"
+        "tablesaw": "~2.0.2",
+        "typed.js": "1.1.1"
     }
 }
