--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
         "breakpoint-sass": "2.4.2",
         "singularitygs": "1.6.2",
         "compass-mixins": "0.12.6",
-        "scales": "2.1.2"
+        "scalescss": "2.1.2"
     }
 }
 
