--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "gulp-autoprefixer": "~2.0.0",
         "gulp-jshint": "~1.5.3",
         "gulp-nunjucks": "~2.0.0",
+        "gulp-plumber": "~1.0",
         "gulp-sass": "~2.1.1",
         "gulp-uglify": "~1.4.2",
         "gulp-webpack-build": "~0.13.1",
