--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "del": "~2.0.2",
         "gulp-autoprefixer": "~2.0.0",
         "gulp-jshint": "~1.5.3",
-        "gulp-nunjucks": "~2.0.0",
         "gulp-plumber": "~1.0",
         "gulp-sass": "~2.1.1",
         "gulp-uglify": "~1.4.2",
@@ -18,6 +17,7 @@
         "jshint-stylish": "~2.0.1",
         "run-sequence": "~1.1.4",
         "exports-loader": "~0.6.2",
+        "nunjucks-loader": "~2.2",
 
         "babel-loader": "~6.2",
         "babel-core": "~6.3",
