Use npm scripts instead of gulp directly

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "repository": "http://git/web-core/hal",
 
     "scripts": {
+        "deploy": "gulp build --deploy",
         "build": "gulp build",
         "watch": "gulp watch",
         "js": "gulp js",
