Automatically select environment when building based on user pref
Fix #195

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -138,6 +138,7 @@ services:
             - '@build.start.twig'
             - '@doctrine.em'
             - '@github'
+            - '@sticky.environment'
             - '@slim.request'
             - '@hal.application'
             - '@currentUser'
