--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "babel-loader": "~6.2",
         "babel-core": "~6.3",
         "babel-preset-es2015": "~6.3",
+        "babel-preset-react": "~6.3",
+
+        "react": "~0.14",
+        "react-dom": "~0.14",
 
         "durationjs": "~1.1.1",
         "favico.js": "~0.3",
