--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "HAL-9000",
     "repository": "http://git/web-core/hal",
+    "license": "SEE LICENSE IN LICENSE",
 
     "scripts": {
         "deploy": "gulp build --deploy",
@@ -15,14 +16,13 @@
         "webpack": "~1.12.2",
 
         "del": "~2.0.2",
-        "gulp-autoprefixer": "~2.0.0",
-        "gulp-jshint": "~1.5.3",
+        "gulp-autoprefixer": "~2.0",
+        "gulp-eslint": "~1.1",
         "gulp-plumber": "~1.0",
-        "gulp-sass": "~2.1.1",
-        "gulp-uglify": "~1.4.2",
+        "gulp-sass": "~2.1",
+        "gulp-uglify": "~1.4",
 
-        "jshint-stylish": "~2.0.1",
-        "run-sequence": "~1.1.4",
+        "run-sequence": "~1.1",
         "exports-loader": "~0.6.2",
         "nunjucks-loader": "~2.2",
 
@@ -30,17 +30,19 @@
         "babel-core": "~6.3",
         "babel-preset-es2015": "~6.3",
         "babel-preset-react": "~6.3",
+        "babel-eslint": "~4.1",
 
         "react": "~0.14",
         "react-dom": "~0.14",
+        "eslint-plugin-react": "~3.13",
 
-        "durationjs": "~1.1.1",
+        "durationjs": "~1.1",
         "favico.js": "~0.3",
         "fuse.js": "~1.3",
-        "jquery": "2.1.3",
-        "nunjucks": "~2.2.0",
+        "jquery": "2.1",
+        "nunjucks": "~2.2",
         "sugar-date": "~1.5",
-        "svg4everybody": "~2.0.1",
+        "svg4everybody": "~2.0",
         "tablesaw": "~2.0.2",
         "typed.js": "1.1.1",
 
