Add child deployments to build start api endpoint

--- a/configuration/di/controllers.api.crud.yml
+++ b/configuration/di/controllers.api.crud.yml
@@ -6,6 +6,7 @@ services:
         arguments:
             - '@response.formatter'
             - '@build.start.validator'
+            - '@push.start.validator'
             - '@doctrine.em'
             - '@redis'
             - '@hal.application'
