Auto backfill user settings upon login

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -35,6 +35,7 @@ services:
             - '@doctrine.em'
             - '@session'
             - '@url'
+            - '@doctrine.random'
             - '@slim.request'
 
     logout.handler:
