Make required app changes for Panthor 2.3

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -17,6 +17,7 @@ parameters:
 
     debug: false
     twig.debug: false
+    error_handling.log_stacktrace: true
 
     # slim
     slim.configuration:
