--- a/configuration/di/controllers.admin.yml
+++ b/configuration/di/controllers.admin.yml
@@ -32,6 +32,7 @@ services:
             - '@doctrine.em'
             - '@redis'
             - '@json'
+            - '@clock'
             - '@slim.not.found'
             - '%hal.agents%'
             - '@slim.route.parameters'
