--- a/configuration/environment/test.yml
+++ b/configuration/environment/test.yml
@@ -17,7 +17,7 @@ parameters:
     github.app.id: ''
     github.app.secret: ''
 
-    logger.mcp.host: 'http://qlsonictest:2581/web/core/logentries'
+    logger.core.url: 'http://qlsonictest:2581/web/core/logentries'
 
     redis.server: 'test.example.com:6379'
     redis.prefix: 'hal9000test'
