Change most HAL 9000 nomenclature to Hal
"Hal" is the proper name for this system.
Not HAL
Not HAL 9000

Just Hal

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ql/hal",
-    "description": "HAL 9000 deployment system",
+    "description": "Hal deployment system",
     "license": "proprietary",
     "authors": [
         { "name": "IT Team Web Core", "email": "itteamwebcore@quickenloans.com" }
