--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "HAL-9000",
+    "name": "Hal",
     "repository": "http://git/web-core/hal",
     "license": "SEE LICENSE IN LICENSE",
 
