--- a/configuration/routes/routes.api.yml
+++ b/configuration/routes/routes.api.yml
@@ -108,25 +108,25 @@ parameters:
 
         api.deployment:
             method: 'GET'
-            route: '/api/deployment/:id'
+            route: '/api/deployments/:id'
             stack: ['middleware.api.cached', 'api.deployment']
             conditions: {id: '%routes.api.regex.digit%'}
 
         # @todo change this url because it is terrible
         api.deployment.lastpush:
             method: 'GET'
-            route: '/api/deployment/:id/last-push'
+            route: '/api/deployments/:id/last-push'
             stack: ['middleware.api.cached', 'api.deployment.lastpush']
             conditions: {id: '%routes.api.regex.digit%'}
 
         api.deployment.history:
             method: 'GET'
-            route: '/api/deployment/:id/pushes'
+            route: '/api/deployments/:id/pushes'
             stack: ['middleware.api.cached', 'api.deployment.history']
             conditions: {id: '%routes.api.regex.digit%'}
         api.deployment.history.paged:
             method: 'GET'
-            route: '/api/deployment/:id/pushes/page/:page'
+            route: '/api/deployments/:id/pushes/page/:page'
             stack: ['middleware.api.cached', 'api.deployment.history']
             conditions:
                 id: '%routes.api.regex.digit%'
