--- a/configuration/routes/routes.api.crud.yml
+++ b/configuration/routes/routes.api.crud.yml
@@ -5,6 +5,6 @@ parameters:
         api.build.start:
             method: 'POST'
             route: '/api/applications/:application/build'
-            stack: ['middleware.api.token', 'middleware.api.require_entity', 'middleware.requestBody', 'api.build.start']
+            stack: ['middleware.api.token', 'middleware.api.require_entity', 'middleware.request_body', 'api.build.start']
             conditions:
                 application: '%routes.regex.digit%'
