Update FAQ and add convenience redirect for api docs
See #140

--- a/configuration/di/controllers.api.yml
+++ b/configuration/di/controllers.api.yml
@@ -9,6 +9,10 @@ services:
         class: 'QL\Hal\Controllers\Api\IndexController'
         arguments: ['@response.formatter']
 
+    api.docs:
+        class: 'QL\Hal\Controllers\Api\DocsRedirectController'
+        arguments: ['@url']
+
     ####################################################################################################################
     # QUEUE CONTROLLERS
     ####################################################################################################################
