--- a/configuration/routes/routes.api.yml
+++ b/configuration/routes/routes.api.yml
@@ -47,6 +47,10 @@ parameters:
         # PUBLIC API ROUTES
         ################################################################################################################
 
+        api.docs:
+            route: '/docs/api'
+            stack: ['api.docs']
+
         api.index:
             method: 'GET'
             route: '/api'
