Move hal from web-core/hal to hal/hal

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Hal",
-    "repository": "http://git/web-core/hal",
+    "repository": "http://git/hal/hal",
     "license": "SEE LICENSE IN LICENSE",
 
     "scripts": {
