--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-dom": "~0.14",
         "eslint-plugin-react": "~3.13",
 
+        "ansi_up": "~1.3",
         "durationjs": "~1.1",
         "favico.js": "~0.3",
         "fuse.js": "~1.3",
