--- a/configuration/di/services.yml
+++ b/configuration/di/services.yml
@@ -147,6 +147,7 @@ services:
             - '@global.message'
             - '@utility.time.formatter'
             - '@utility.name.formatter'
+            - '%gravatar.fallback%'
 
     twig.extension.hal.global:
         class: 'QL\Hal\Twig\GlobalExtension'
