--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "exports-loader": "~0.6.2",
         "nunjucks-loader": "~2.2",
 
+        "babel-polyfill": "~6.5",
         "babel-loader": "~6.2",
         "babel-core": "~6.3",
         "babel-preset-es2015": "~6.3",
