--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
 
-        "ql/hal-core":          "2.9.0-rc2",
-        "ql/kraken-core":       "2.9.0-rc1",
+        "ql/hal-core":          "2.9.0",
+        "ql/kraken-core":       "2.9.0",
         "ql/panthor-plugins":   "~1.0",
 
         "ql/mcp-cache":         "~2.2",
