--- a/configuration/di/controllers.admin.yml
+++ b/configuration/di/controllers.admin.yml
@@ -67,6 +67,7 @@ services:
     admin.permissions.remove.page:
         class: 'QL\Hal\Controllers\Admin\Permissions\RemovePermissionsController'
         arguments:
+            - '@doctrine.em'
             - '@admin.permissions.remove.twig'
             - '@currentUser'
             - '@hal.userType'
@@ -79,6 +80,7 @@ services:
     admin.permissions.remove.handler:
         class: 'QL\Hal\Controllers\Admin\Permissions\RemovePermissionsHandler'
         arguments:
+            - '@doctrine.em'
             - '@currentUser'
             - '@hal.userType'
             - '@permissions'
