Allow users to change application github repo
Also removes ability for users to add (or remove) email notifications

Fix #267

--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -67,6 +67,7 @@ services:
             - '@slim.request'
             - '@currentUser'
             - '@doctrine.random'
+            - '%github.site.baseurl%'
         calls:
             - ['setCache', ['@cache']]
             - ['setCacheTTL', ['%cache.page.ttl%']]
@@ -79,9 +80,11 @@ services:
         arguments:
             - '@application.edit.twig'
             - '@doctrine.em'
+            - '@github'
             - '@hal.application'
             - '@session.flasher'
             - '@slim.request'
+            - '%github.site.baseurl%'
     application.edit.twig:
         parent: 'twig.auto.template'
         calls: [['setTemplate', ['application/application.edit.twig']]]
