Add timeout (2,3s) to consul api and add updated time to all deployed configs
This doesn't permanently fix the issue because if an app has a lot of properties
(100, 200 or more) the app will still need to wait for them all, even if
individually they have low timeouts.

The actual timeout is something like (connect + timeout) * (total batches)

e.g.
> 300 properties, 25 batch size = 12 batches
> 12 batches * (2s + 3s) = 60 seconds

Fix #184

--- a/configuration/kraken/kraken.services.yml
+++ b/configuration/kraken/kraken.services.yml
@@ -12,8 +12,10 @@ services:
         class: 'QL\Kraken\Service\ConsulService'
         arguments:
             - '@kraken.guzzle'
+            - '@clock'
             - '@kraken.crypto.db'
             - '%kraken.environmentalize%'
+            - '%date.timezone%'
 
     kraken.deploy:
         class: 'QL\Kraken\Service\DeploymentService'
@@ -55,7 +57,12 @@ services:
 
     kraken.guzzle:
         class: 'GuzzleHttp\Client'
-
+        arguments:
+            -
+                defaults:
+                    connect_timeout: 2
+                    timeout: 3
+                    exceptions: true
     kraken.random:
         class: 'QL\Hal\Core\RandomGenerator'
 
