--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
 
     "require": {
-        "php-64bit": "~5.5",
+        "php-64bit": "~5.6 || ~7.0",
 
         "ext-curl": "*",
         "ext-ldap": "*",
