--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,6 @@
         "psr-4": { "QL\\Hal\\": "src", "QL\\Kraken\\": "src-kraken" }
     },
 
-    "repositories": [
-        { "type": "git", "url": "http://git/hal/hal-core.git" },
-        { "type": "git", "url": "http://git/hal/kraken-core.git" }
-    ],
-
     "require": {
         "php-64bit": "~5.6 || ~7.0",
 
@@ -38,8 +33,8 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
 
-        "ql/hal-core":          "dev-master as 2.9.1",
-        "ql/kraken-core":       "dev-master",
+        "ql/hal-core":          "~2.10@beta",
+        "ql/kraken-core":       "~2.10@beta",
         "ql/panthor-plugins":   "~1.0",
 
         "ql/mcp-cache":         "~2.2",
