--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "autoload": {
         "psr-4": { "QL\\Hal\\": "src", "QL\\Kraken\\": "src-kraken" }
     },
+    "repositories": [
+        { "type": "git", "url": "http://git/hal/hal-core.git" }
+    ],
 
     "require": {
         "php-64bit": "~5.6 || ~7.0",
@@ -33,7 +36,7 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
 
-        "ql/hal-core":          "~2.10@beta",
+        "ql/hal-core":          "dev-master as 2.10.0-beta2",
         "ql/kraken-core":       "~2.10@beta",
         "ql/panthor-plugins":   "~1.0",
 
