--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "durationjs": "~1.1",
         "favico.js": "~0.3",
         "fuse.js": "~1.3",
+        "hint.css": "~2.4",
         "jquery": "2.1",
         "nunjucks": "~2.2",
         "sugar-date": "~1.5",
@@ -51,7 +52,6 @@
         "breakpoint-sass": "~2.6",
         "modularscale-sass": "~2.1",
         "compass-mixins": "~0.12",
-        "scalescss": "2.2.2",
-        "primer-css": "~2.5"
+        "scalescss": "2.2.2"
     }
 }
