--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "autoload": {
         "psr-4": { "QL\\Hal\\": "src", "QL\\Kraken\\": "src-kraken" }
     },
-
     "require": {
         "php-64bit": "~5.6 || ~7.0",
 
@@ -24,9 +23,10 @@
         "ext-pdo_sqlite": "*",
         "ext-xmlwriter": "*",
         "doctrine/orm": "~2.5.6",
-        "guzzle/guzzle": "3.9.*",
         "guzzlehttp/guzzle": "5.*",
-        "knplabs/github-api": "1.3.1",
+        "php-http/guzzle5-adapter": "~1.0.0",
+        "knplabs/github-api": "~2.0.1",
+        "cache/predis-adapter": "~0.4.2",
         "paragonie/random_compat": "~1.1",
         "predis/predis": "~1.0",
         "psr/log": "*",
@@ -35,7 +35,7 @@
         "ql/kraken-core":       "2.10.0",
         "ql/panthor-plugins":   "~1.0",
 
-        "ql/mcp-cache":         "~2.2",
+        "ql/mcp-cache":         "3.0.0",
         "ql/mcp-core":          "~1.1",
         "ql/mcp-corp-account":  "~1.0",
         "ql/mcp-crypto":        "~2.1.2",
@@ -53,6 +53,7 @@
         "symfony/debug":                "~2.7",
         "symfony/finder":               "~2.7",
         "symfony/yaml":                 "~2.7",
+        "symfony/options-resolver":     "~3.2",
         "symfony/proxy-manager-bridge": "~2.7",
 
         "twig/twig": "~1.20"
