--- a/configuration/di/services.yml
+++ b/configuration/di/services.yml
@@ -176,7 +176,7 @@ services:
             - ['setCache', ['@twig.extension.github.cache']]
 
     twig.extension.github.cache:
-        class: 'MCP\Cache\MemoryCache'
+        class: 'QL\MCP\Cache\MemoryCache'
 
     twig.extension.status:
         class: 'QL\Hal\Twig\StatusExtension'
@@ -192,6 +192,20 @@ services:
             - ['addExtension', ['@twig.extension.github']]
             - ['addExtension', ['@twig.extension.status']]
             - ['addExtension', ['@kraken.twig.extension']]
+
+    ####################################################################################################################
+    # HTTP Plug
+    ####################################################################################################################
+    github.http.cache.plugin:
+        class: 'QL\Hal\Github\MCPCachePlugin'
+        arguments:
+            - '@cache'
+            - '@plug.http_stream_factory'
+            - {respect_cache_headers: false, default_ttl: '%cache.github.default.ttl%'}
+
+    plug.http_stream_factory:
+        class: 'Psr\Http\Message\StreamInterface\StreamFactory'
+        factory: ['Http\Discovery\StreamFactoryDiscovery', 'find']
 
     ####################################################################################################################
     # GitHub
@@ -211,16 +225,20 @@ services:
         arguments: ['@github', '%github.site.baseurl%']
 
     github.client:
-        class: 'Github\Client'
-        arguments: ['@github.http.client']
-
-    github.http.client:
-        class: 'QL\Hal\Github\CachedHttpClient'
-        arguments:
-            - {base_url: '%github.baseurl%'}
+        class: 'QL\Hal\Github\EnterpriseClient'
+        arguments: ['@github.http.builder', null, '%github.site.baseurl%']
+        configurator: ['@github.client.configurator', configure]
         calls:
             - ['authenticate', ['%github.token%', null, 'http_token']]
-            - ['setCache', ['@cache.github']]
+
+    github.client.configurator:
+        class: 'QL\Hal\Github\GithubClientConfigurator'
+        arguments:
+            - '@github.http.cache.plugin'
+            - '@github.http.builder'
+
+    github.http.builder:
+        class: 'Github\HttpClient\Builder'
 
     github.pager:
         class: 'Github\ResultPager'
