updating symfony, slim, and panthor

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -29,8 +29,7 @@ parameters:
 
     ldap.host: 'ldap.example.com'
     ldap.domain: 'MI'
-    ldap.baseDn: 'DC=mi,DC=corp'
-    ldap.username: ''
+    ldap.port: 389
 
     ############################################################################
     # doctrine
