--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
 
     "autoload": {
-        "psr-4": { "QL\\Hal\\": "src", "QL\\Kraken\\": "src-kraken" }
+        "psr-4": { "QL\\Hal\\": "src" }
     },
     "require": {
         "php-64bit": "~5.6 || ~7.0",
